# research_car_controller

./: .env.example  LICENSE  README.md  pyproject.toml  pyrightconfig  report.md
output/: report.md
src/research_car_controller/: crew.py  main.py
src/research_car_controller/config/: agents.yaml  tasks.yaml
